<resources>
    <string name="app_name">Togther</string>
    <string name="title_activity_post">post</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="signinbutton_text">Login</string>
    <string name="titlehint">Title</string>
    <string name="CountryHint">Country</string>
    <string name="StateHint">State</string>
    <string name="CityHint">City</string>
    <string name="ThemeHint">Theme: eg,holiday,island,etc</string>
    <string name="DescriptionHint">Description: add more detail</string>
    <string name="btn_upload">Upload files</string>
    <string name="btn_submit">Submit</string>
</resources>
